<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wangjulong.cp5.DataActivity"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/updateNet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="updateNet"
            android:text="@string/Data_联网更新"
            android:layout_weight="1" />

        <Button
            android:text="@string/Data_手动更新"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/UpdateManual"
            android:onClick="updateManual"
            android:layout_weight="1" />

        <Button
            android:text="@string/Data_显示数据"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DataView"
            android:onClick="dataView"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manualLinearLayout"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText1"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText2"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText3"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText4"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText5"
            android:layout_weight="1"/>

        <Button
            android:text="@string/确定"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manualUpdateNumbers"
            android:layout_weight="1"
            android:onClick="manualUpdateNumbers" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView1" />

</LinearLayout>
